directives and pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 <!-- OUTPUT (CHILD TO PARENT): <br>
 {{VarToParent}} -->
 
-<app-one> </app-one>
+<!-- <app-one> </app-one> -->
 
+<!-- <app-interpolation></app-interpolation> -->
+<app-directive></app-directive>
 <router-outlet></router-outlet>
 
